--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,6 +45,7 @@ jobs:
           tags: free60/toolchain:latest
           cache-from: type=local,src=/tmp/.buildx-cache-toolchain
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-toolchain-new
+                    type=registry,ref=free60/toolchain:latest
 
       - name: Build and push LibXenon
         id: docker_build_libxenon
@@ -56,6 +57,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: free60/libxenon:latest
           cache-from: type=local,src=/tmp/.buildx-cache-libxenon
+                      type=registry,ref=free60/toolchain:latest
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-libxenon-new
 
       - name: Image digest
