--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,24 +8,24 @@ on:
 
 jobs:
   build_toolchain:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     
       - name: Check Out Repo 
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             /tmp/.buildx-cache-toolchain
@@ -36,7 +36,7 @@ jobs:
 
       - name: Build and push Toolchain
         id: docker_build_toolchain
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: ./
           file: ./toolchain.dockerfile
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build and push LibXenon
         id: docker_build_libxenon
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: ./
           file: ./libxenon.dockerfile
@@ -56,6 +56,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: free60/libxenon:latest
           cache-from: type=local,src=/tmp/.buildx-cache-libxenon
+                      type=local,mode=max,dest=/tmp/.buildx-cache-toolchain-new
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-libxenon-new
 
       - name: Image digest
