--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,47 +8,34 @@ on:
 
 jobs:
   build_toolchain:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     
       - name: Check Out Repo 
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
-            /tmp/.buildx-cache-toolchain
             /tmp/.buildx-cache-libxenon
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Build and push Toolchain
-        id: docker_build_toolchain
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./toolchain.dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: free60/toolchain:latest
-          cache-from: type=local,src=/tmp/.buildx-cache-toolchain
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-toolchain-new
-
       - name: Build and push LibXenon
         id: docker_build_libxenon
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: ./
           file: ./libxenon.dockerfile
@@ -60,7 +47,6 @@ jobs:
 
       - name: Image digest
         run: |
-          echo toolchain image ${{ steps.docker_build_toolchain.outputs.digest }}
           echo libxenon image ${{ steps.docker_build_libxenon.outputs.digest }}
 
         # Temp fix
@@ -68,7 +54,5 @@ jobs:
         # https://github.com/moby/buildkit/issues/1896
       - name: Move cache
         run: |
-          rm -rf /tmp/.buildx-cache-toolchain
           rm -rf /tmp/.buildx-cache-libxenon
-          mv /tmp/.buildx-cache-toolchain-new /tmp/.buildx-cache-toolchain
           mv /tmp/.buildx-cache-libxenon-new /tmp/.buildx-cache-libxenon
