enable BUILDKIT_INLINE_CACHE on the build steps

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,6 +43,8 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: free60/toolchain:latest
+          build-args: |
+              BUILDKIT_INLINE_CACHE=1
           cache-from: type=local,src=/tmp/.buildx-cache-toolchain
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-toolchain-new
           load: true
@@ -57,7 +59,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: free60/libxenon:latest
           build-args: |
-              PULL=0
+              BUILDKIT_INLINE_CACHE=1
           cache-from: type=local,src=/tmp/.buildx-cache-libxenon
                       type=local,mode=max,dest=/tmp/.buildx-cache-toolchain-new
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-libxenon-new
